# anime-organizer-rs

./: .gitignore  Cargo.toml  test.env
helper/: json_to_folder.py
src/: lib.rs  main.rs  series.rs  tests.rs
static/: filter_words.yaml
static/tests/: episode_number_extraction_with_context.json  series_name.json  series_season_number.json  string_episode_number_discovery.json  string_space_deduplication.json  string_year_removal.json
